sec_grp_http_https_ssh/main.tf
variable "my_vpc_id" {
  description = "AWS account VPC_ID"
  type        = string
}

resource "aws_security_group" "http_https_ssh" {
  name        = "http-https-ssh-sg"
  description = "Allow SSH and HTTP and HTTPS traffic"
  vpc_id      = var.my_vpc_id # Replace with your VPC ID

  # Inbound rule for HTTP traffic
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #allow HTTPS
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #allow SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
